--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -16,6 +16,21 @@
   </properties>
   
   <dependencies>
+  	<dependency>
+	    <groupId>org.apache.directory.studio</groupId>
+	    <artifactId>org.apache.commons.codec</artifactId>
+	    <version>1.8</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20180130</version>
+	</dependency>
+	<dependency>  
+	    <groupId>com.google.code.gson</groupId>  
+	    <artifactId>gson</artifactId>  
+	    <version>2.8.2</version>  
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
