--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -31,6 +31,11 @@
 	    <artifactId>gson</artifactId>  
 	    <version>2.8.2</version>  
 	</dependency>
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
